--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 蔡嘉文的网志
 description: 研究、写作
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/Caijiawen/Caijiawen.github.io/blob/master/images/jiawen_comic.jpg
 
 #
 # Flags below are optional
