--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 蔡嘉文的网志
+name: 自由国度
 
 # Short bio or description (displayed in the header)
 description: 持续成长，创造财富，追求幸福
