--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 蔡嘉文的博客
 
 # Short bio or description (displayed in the header)
-description: 持续成长，创造财富，追求幸福
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://i.loli.net/2018/03/29/5abc3c1321a90.jpg
